--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,10 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 
+[project.urls]
+"Documentation" = "https://github.com/fedamerd/msgraph-py/blob/main/README.md"
+"Issue tracker" = "https://github.com/fedamerd/msgraph-py/issues"
+"Release notes" = "https://github.com/fedamerd/msgraph-py/releases"
+"Source code" = "https://github.com/fedamerd/msgraph-py"
+
 [tool.setuptools_scm]
