--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,9 @@ classifiers = [
 ]
 
 [project.urls]
-"Documentation" = "https://github.com/fedamerd/msgraph-py/blob/main/README.md"
-"Issue tracker" = "https://github.com/fedamerd/msgraph-py/issues"
-"Release notes" = "https://github.com/fedamerd/msgraph-py/releases"
-"Source code" = "https://github.com/fedamerd/msgraph-py"
+Changelog = "https://github.com/fedamerd/msgraph-py/blob/main/CHANGELOG.md"
+Documentation = "https://github.com/fedamerd/msgraph-py/blob/main/README.md"
+Issues = "https://github.com/fedamerd/msgraph-py/issues"
+Source = "https://github.com/fedamerd/msgraph-py"
 
 [tool.setuptools_scm]
